--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,17 +71,17 @@ jobs:
       - name: Copy Plugin into Container
         run: |
           CONTAINER_ID=$(docker-compose -f .github/docker/docker-compose.yml ps -q wordpress)
+          echo "Creating build folder..."
           docker exec $CONTAINER_ID mkdir -p /var/www/html/wp-content/plugins/shortpixel-image-optimiser/build/
+          echo "Copying plugin files..."
           docker cp build/shortpixel/ "$CONTAINER_ID":/var/www/html/wp-content/plugins/shortpixel-image-optimiser/build/
           docker cp res "$CONTAINER_ID":/var/www/html/wp-content/plugins/shortpixel-image-optimiser/
           docker cp class "$CONTAINER_ID":/var/www/html/wp-content/plugins/shortpixel-image-optimiser/
           docker cp wp-shortpixel.php "$CONTAINER_ID":/var/www/html/wp-content/plugins/shortpixel-image-optimiser/
           docker cp shortpixel-plugin.php "$CONTAINER_ID":/var/www/html/wp-content/plugins/shortpixel-image-optimiser/
           docker cp readme.txt "$CONTAINER_ID":/var/www/html/wp-content/plugins/shortpixel-image-optimiser/
-          docker exec $CONTAINER_ID ls -alh /var/www/html/wp-content/plugins/
+          echo "Listing main plugin files:"
           docker exec $CONTAINER_ID ls -alh /var/www/html/wp-content/plugins/shortpixel-image-optimiser/
-          docker exec $CONTAINER_ID ls -alh /var/www/html/wp-content/plugins/shortpixel-image-optimiser/shortpixel/
-          docker exec $CONTAINER_ID ls -alh /var/www/html/wp-content/plugins/shortpixel-image-optimiser/build/shortpixel/
 
       # Activate the plugin using WP-CLI
       - name: Activate Plugin via WP-CLI
