--- a/.github/docker/docker-compose.yml
+++ b/.github/docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
   db:
-    image: mysql:5.7
+    image: mysql:8.0
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: test
@@ -26,6 +26,21 @@ services:
       WORDPRESS_DB_NAME: wordpress
     volumes:
       - ./wp-content:/var/www/html/wp-content
+
+  wordpress-cli:
+    image: wordpress:cli
+    depends_on:
+      - wordpress
+      - db
+    volumes:
+      - ./wordpress:/var/www/html
+      - ./plugins:/var/www/html/wp-content/plugins
+
+  svn:
+    image: subversion
+    volumes:
+      - ./svn:/var/lib/svn
+    command: svnserve -d -r /var/lib/svn
 
 volumes:
   db_data: {}
