--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,7 @@ jobs:
 
       - name: Install WordPress via WP-CLI
         run: |
+          echo "Skipping WP-CLI installation"
           #CONTAINER_ID=$(docker-compose -f .github/docker/docker-compose.yml ps -q wordpress)
           # Ensure WP-CLI is available inside the container.
           #docker exec $CONTAINER_ID bash -c "if ! command -v wp &> /dev/null; then \
