--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,9 +97,10 @@ jobs:
       # Setup WordPress tests
       - name: Setup WordPress core tests
         run: |
+          CONTAINER_ID=$(docker-compose -f .github/docker/docker-compose.yml ps -q wordpress)
           echo "Copying WordPress tests..."
-          mkdir -p /var/www/html/tests/
-          wp_version=$(wp core version); svn export --quiet --ignore-externals https://develop.svn.wordpress.org/$wp_version/tests/phpunit/includes/ /var/www/html/tests/includes/
+          docker exec $CONTAINER_ID sudo mkdir -p /var/www/html/tests/
+          docker exec $CONTAINER_ID wp_version=$(wp core version); svn export --quiet --ignore-externals https://develop.svn.wordpress.org/$wp_version/tests/phpunit/includes/ /var/www/html/tests/includes/
           ls -alh /var/www/html/tests/includes/
 
       #Configure GH token to access the plugin-modules repo, which is private
