Attempt again to install SVN inside the docker container

--- a/.github/docker/docker-compose.yml
+++ b/.github/docker/docker-compose.yml
@@ -13,7 +13,9 @@ services:
       - db_data:/var/lib/mysql
 
   wordpress:
-    image: wordpress:latest
+    build:
+      context: ./docker/wordpress
+      dockerfile: Dockerfile
     depends_on:
       - db
     ports:
