Use single quotes instead of doubles

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,9 +96,9 @@ jobs:
           CONTAINER_ID=$(docker-compose -f .github/docker/docker-compose.yml ps -q wordpress)
           echo "Copying WordPress tests..."
           docker exec $CONTAINER_ID mkdir -p /var/www/html/tests/includes/
-          docker exec $CONTAINER_ID bash -c "wp_version=$(wp core version); \
+          docker exec $CONTAINER_ID bash -c 'wp_version=$(wp core version); \
             svn export --quiet --ignore-externals https://develop.svn.wordpress.org/$wp_version/tests/phpunit/includes/ /var/www/html/tests/includes/; \
-            ls -alh /var/www/html/tests/includes/"
+            ls -alh /var/www/html/tests/includes/'
 
       #Configure GH token to access the plugin-modules repo, which is private
       - name: Configure GitHub OAuth for Composer
