Update SVN link to the correct one

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,8 +97,9 @@ jobs:
           echo "Copying WordPress tests..."
           docker exec $CONTAINER_ID mkdir -p /var/www/html/tests/includes/
           docker exec $CONTAINER_ID bash -c 'wp_version=$(wp core version --allow-root); \
-            svn export --quiet --ignore-externals https://develop.svn.wordpress.org/$wp_version/tests/phpunit/includes/ /var/www/html/tests/includes/; \
-            ls -alh /var/www/html/tests/includes/'
+            svn export --quiet --ignore-externals https://develop.svn.wordpress.org/tags/$wp_version/tests/phpunit/includes/ /var/www/html/tests/includes/; \
+            svn export --quiet --ignore-externals https://develop.svn.wordpress.org/tags/$wp_version/tests/phpunit/data/ /var/www/html/tests/data/; \
+            ls -alh /var/www/html/tests/includes/; ls -alh /var/www/html/tests/data/'
 
       #Configure GH token to access the plugin-modules repo, which is private
       - name: Configure GitHub OAuth for Composer
