Add composer inside the docker container

--- a/.github/docker/wordpress/Dockerfile
+++ b/.github/docker/wordpress/Dockerfile
@@ -2,4 +2,12 @@
 FROM wordpress:latest
 
 # Install SVN (Subversion)
-RUN apt-get update && apt-get install -y subversion && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && \
+    apt-get install -y subversion && \
+    rm -rf /var/lib/apt/lists/*
+
+# Install Composer prerequisites, download and install Composer
+RUN apt-get update && \
+    apt-get install -y curl unzip && \
+    rm -rf /var/lib/apt/lists/* && \
+    curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
