--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,22 +8,9 @@
 	convertWarningsToExceptions="true"
 	>
 	<testsuites>
-		<testsuite name="fileSystem">
-			<directory prefix="test-" suffix=".php">./tests/filesystem</directory>
+		<testsuite name="testing">
+			<directory prefix="test-" suffix=".php">./tests/</directory>
+			<exclude>./tests/test-sample.php</exclude>
 		</testsuite>
-		<testsuite name="imageModel">
-			<directory prefix="test-" suffix=".php">./tests/Model/image</directory>
-		</testsuite>
-		<testsuite name="Controllers">
-			<directory prefix="test-" suffix=".php">./tests/Controller</directory>
-		</testsuite>
-		<testsuite name="queue">
-			<directory prefix="test-" suffix=".php">./tests/queue</directory>
-		</testsuite>
-		<testsuite name="model">
-			<directory prefix="test-" suffix=".php">./tests/Model</directory>
-		</testsuite>
-
-
 	</testsuites>
 </phpunit>
