--- a/.github/workflows/spio.yml
+++ b/.github/workflows/spio.yml
@@ -48,7 +48,7 @@ jobs:
         run: |
           # Create directory for WP tests if it doesn’t exist
           mkdir -p "${WP_TESTS_DIR}"
-          bash bin/install-wp-tests.sh wordpress_test root "" 127.0.0.1 "${WP_VERSION}"
+          bash bin/install-wp-tests.sh wordpress_test root password 127.0.0.1 "${WP_VERSION}"
 
       - name: Run PHPUnit tests
         run: vendor/bin/phpunit
