--- a/.github/workflows/spio.yml
+++ b/.github/workflows/spio.yml
@@ -11,6 +11,20 @@ jobs:
     name: Run Tests
     runs-on: ubuntu-latest
 
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: password
+          MYSQL_DATABASE: wordpress_test
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd "mysqladmin ping --silent"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 3
+
     env:
       WP_CORE_DIR: ${{ github.workspace }}/tmp/wordpress
       WP_TESTS_DIR: ${{ github.workspace }}/tmp/wordpress-tests-lib
@@ -46,9 +60,19 @@ jobs:
 
       - name: Install WordPress Unit Test Suite
         run: |
-          # Create directory for WP tests if it doesn’t exist
           mkdir -p "${WP_TESTS_DIR}"
-          bash bin/install-wp-tests.sh wordpress_test root password 127.0.0.1 "${WP_VERSION}"
+          bash bin/install-wp-tests.sh "$DB_NAME" "$DB_USER" "$DB_PASS" "$DB_HOST" "${WP_VERSION}"
+          # Wait for MySQL to be up and running
+          timeout=30
+          while ! mysqladmin ping -h "$DB_HOST" --user="$DB_USER" --password="$DB_PASS" --silent; do
+            >&2 echo "MySQL is unavailable - sleeping"
+            sleep 1
+            timeout=$((timeout-1))
+            if [ $timeout -eq 0 ]; then
+              >&2 echo "MySQL still not responding, aborting."
+              exit 1
+            fi
+          done
 
       - name: Run PHPUnit tests
         run: vendor/bin/phpunit
