--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,24 @@
 {
+  "name": "short-pixel-optimizer/shortpixel-image-optimiser",
+  "require": {
+    "short-pixel-optimizer/plugin-modules": "*"
+  },
+    "repositories": [
+        {
+            "packagist.org": false,
+            "type": "vcs",
+            "url": "https://github.com/short-pixel-optimizer/plugin-modules.git"
+        }
+    ],
+    "require": {
+        "shortpixel/build" : "@dev",
+	"shortpixel/filesystem" : "@dev",
+	"shortpixel/log" : "@dev",
+	"shortpixel/notices":"@dev",
+        "shortpixel/replacer" : "@dev",
+	"shortpixel/shortq": "@dev",
+	"shortpixel/updater": "@dev"
+    },
     "require-dev": {
 	"phpunit/phpunit": "^9",
 	"mikey179/vfsstream": "^1",
