--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "require-dev": {
 	"phpunit/phpunit": "^9",
 	"mikey179/vfsstream": "^1",
-	"10up/wp_mock": "@dev"
+	"10up/wp_mock": "@dev",
+        "php-stubs/wp-cli-stubs": "^2.11"
 
     },
    "autoload": {
